--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,4 +46,4 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
           #- { path: ^/(login|register)$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-          #- { path: ^/, role: ROLE_USER }
+          - { path: ^/dashboard, role: ROLE_ADMIN }
