--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,6 +33,7 @@ security:
               login_path: login
               check_path: login
             logout: true
+            logout_on_user_change: true
             anonymous: ~
 
             # activate different ways to authenticate
@@ -46,5 +47,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-          #- { path: ^/(login|register)$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+          - { path: ^/(login|register)$, role: IS_AUTHENTICATED_ANONYMOUSLY }
           - { path: ^/dashboard, role: ROLE_ADMIN }
+          - { path: ^/profile/create, role: ROLE_USER }
+
+         - { path: ^/myorders, role: roles: [ROLE_ADMIN, ROLE_USER] }
